experimental/unifi/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: unifi-controller
  labels:
    app: unifi-controller

spec:
  replicas: 1
  serviceName: unifi-controller
  selector:
    matchLabels:
      app: unifi-controller
  template:
    metadata:
      labels:
        app: unifi-controller
    spec:
      containers:
        - env:
            - name: MEM_LIMIT
              value: 1024M
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
          image: linuxserver/unifi-controller
          name: unifi-controller
          ports:
            - containerPort: 3478
              protocol: UDP
            - containerPort: 10001
              protocol: UDP
            - containerPort: 8080
            - containerPort: 8081
            - containerPort: 8443
            - containerPort: 8843
            - containerPort: 8880
            - containerPort: 6789
          volumeMounts:
            - mountPath: /config
              name: volume
      restartPolicy: Always
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: pvc-unifi
