experimental/unifi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: unifi-controller
  name: unifi-controller

spec:
  selector:
    app: unifi-controller
  ports:
    - name: "3478"
      port: 3478
      protocol: UDP
      targetPort: 3478
    - name: "10001"
      port: 10001
      protocol: UDP
      targetPort: 10001
    - name: portal-http
      port: 8080
      targetPort: 8080
    - name: "8081"
      port: 8081
      targetPort: 8081
    - name: portal-https
      port: 8443
      targetPort: 8443
    - name: "8843"
      port: 8843
      targetPort: 8843
    - name: "8880"
      port: 8880
      targetPort: 8880
    - name: "6789"
      port: 6789
      targetPort: 6789
  externalIPs:
    - "192.168.1.24"
