experimental/unifi/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  labels:
    app: unifi-controller
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.hut.sh/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.hut.sh/oauth2/start?rd=https://$host$uri"
    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    hajimari.io/enable: "true"
    hajimari.io/appName: "Unifi Controller"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - unifi.hut.sh
      secretName: my-certs-unifi
  rules:
    - host: unifi.hut.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi-controller
                port:
                  name: portal-http
